# AR-Agent

./: .gitignore  COMMIT_EDITMSG  DEPLOYMENT_GUIDE.md  Dockerfile  FETCH_HEAD  HEAD  README.md  app.py  config  demo.py  docker-compose.yml  index  main  pyproject.toml  requirements.txt  test_basic.py
configs/: config.yaml
scripts/: setup.sh
src/ar_interface/: ar_engine.py
src/medical_analyzer/: analyzer.py
static/css/: style.css
static/js/: script.js
templates/: index.html
